# Assembler

./: CMakeCache.txt  CMakeLists.txt  README.md  SettingLexTree.c  SettingLexTree.h  assembler.c  baseTransitionUtiles.c  baseTransitionUtiles.h  codingToCodeImageFirstPass.c  codingToCodeImageFirstPass.h  definitionSentenceTests.as  definitionSentenceTestsOrg.as  entryExternDeclaration.c  entryExternDeclaration.h  filesUtil.c  filesUtil.h  firstPassCoding.c  firstPassCoding.h  firstPassMainFile.c  firstPassMainFile.h  globaldefinitionsNStructures.c  globaldefinitionsNStructures.h  label.c  label.h  labelNDefineValidation.c  labelNDefineValidation.h  lexTree.c  lexTree.h  lexTreeValidation.c  lexTreeValidation.h  line.c  line.h  macroUtiles.c  macroUtiles.h  makefile  memoryImage.c  memoryImage.h  page35Example.as  page35ExampleWithLongLines.as  page35ExampleWithWiteLines.as  (+22 more)
assembler/: SettingLexTree.c  assembler.c  baseTransitionUtiles.c  baseTransitionUtiles.h  entryExternDeclaration.c  filesUtil.h  firstPassCoding.h  firstPassMainFile.c  firstPassMainFile.h  globaldefinitionsNStructures.c  globaldefinitionsNStructures.h  label.c  label.h  labelNDefineValidation.h  lexTree.c  lexTreeValidation.c  line.c  line.h  macroUtiles.h  makefile  memoryImage.c  memoryImage.h  parser.c  parser.h  preAssembblerMainFile.c  secondPassCodding.c  secondPassMainFile.h  someEntryNExternErrors.as
examples/: ps.as  ps.ob
tests/: ILEGALlABELS.as  definitionSentenceTests.as  psWithErrorsInOrderSentence.as  psWithSomeUseCase.as  thirdGroupTests.as
